Fix: Update Render config and requirements for deployment

--- a/render.yaml
+++ b/render.yaml
@@ -10,11 +10,6 @@ services:
         sync: false
       - key: XAI_MODEL
         value: grok-3
-      - key: BACKEND_URL
-        fromService:
-          name: altitude-backend
-          type: web
-          property: host
     healthCheckPath: /
 
   # Streamlit Frontend
@@ -25,8 +20,5 @@ services:
     startCommand: streamlit run app.py --server.port $PORT --server.address 0.0.0.0 --server.headless true
     envVars:
       - key: BACKEND_URL
-        fromService:
-          name: altitude-backend
-          type: web
-          property: host
+        sync: false
 
